k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-api
spec:
  selector:
    app: quotes-api
  ports:
  - name: tcp-quotes
    port: 80
    targetPort: 3000
  clusterIP: None
