k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quotes-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - quotes-gateway
  http:
  - route:
    - destination:
        host: quotes-api.quotes-system.svc.cluster.local
        subset: v1
      weight: 90
    - destination:
        host: quotes-api.quotes-system.svc.cluster.local
        subset: v2
      weight: 10
